# RP2040MacropadHidSample

./: NOTICE.md  README.md  compile.sh  setup.sh
src/: CMakeLists.txt  macropad.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h  util.h
src/Encoder/: Encoder.c  Encoder.h
src/Keys/: Keys.c  Keys.h  keymap.h
src/Lighting/: LampArray.c  LampArray.h  LampArrayHidStructs.h  Neopixel.c  Neopixel.h  neopixel.pio
